log
Thu 20 Apr 2023 04:33:33 PM UTC: 
 tests:  1|8
total_score: 0/70
d5075c2
Thu 20 Apr 2023 04:59:31 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
17a6fdb
Thu 20 Apr 2023 05:09:45 PM UTC: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  11|6
total_score: 15/70
b014da5
Thu 20 Apr 2023 05:33:30 PM UTC: 
 treemap.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
 tests:  11|6
total_score: 15/70
fc0ce7c
Fri 21 Apr 2023 11:49:32 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
6c9b03d
Sat 22 Apr 2023 12:01:46 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
91c1ff4
Sat 22 Apr 2023 12:04:20 AM UTC: 
 treemap.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
729d42a
Sat 22 Apr 2023 12:11:44 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|6
total_score: 15/70
6d4f053
Sat 22 Apr 2023 12:13:20 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|6
total_score: 15/70
96b756e
Sat 22 Apr 2023 12:14:45 AM UTC: 
 treemap.c | 21 +++++++++++----------
 1 file changed, 11 insertions(+), 10 deletions(-)
 tests:  11|6
total_score: 15/70
287aa5c
Sat 22 Apr 2023 12:25:45 AM UTC: 
 treemap.c | 19 +++++--------------
 1 file changed, 5 insertions(+), 14 deletions(-)
 tests:  11|6
total_score: 15/70
e4ab881
Sat 22 Apr 2023 02:27:01 AM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:63:13: error: unused variable ‘parent’ [-Werror=unused-variable]
   63 |   TreeNode *parent = NULL;
      |             ^~~~~~
treemap.c:62:13: error: unused variable ‘current’ [-Werror=unused-variable]
   62 |   TreeNode *current = tree->root;
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
db46e5f
Sat 22 Apr 2023 02:27:14 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  11|6
total_score: 15/70
fba4647
Sat 22 Apr 2023 02:29:42 AM UTC: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
08d9a2a
Sat 22 Apr 2023 02:34:08 AM UTC: 
 treemap.c | 32 +++++++++++++-------------------
 1 file changed, 13 insertions(+), 19 deletions(-)
 tests:  0|0
22ee079
Sat 22 Apr 2023 02:34:39 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
07b7182
Sat 22 Apr 2023 02:35:50 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
f14be8b
Sat 22 Apr 2023 02:37:42 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
e39445a
Sat 22 Apr 2023 02:39:31 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b96aef6
Sat 22 Apr 2023 02:47:20 AM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  13|5
total_score: 25/70
11c9647
Sat 22 Apr 2023 02:49:08 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
6d31bd5
Sat 22 Apr 2023 02:49:15 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
539694d
Sat 22 Apr 2023 02:53:15 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
fc8d554
Sat 22 Apr 2023 02:53:50 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
2beb316
